...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_lock_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_device"
        android:onClick="onClick" />
</LinearLayout>

