...
        android:layout_gravity="center"
        android:layout_marginBottom="230dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="Secure your device now! Please activate this app as an administrator by pressing the button below!"/>
    <ToggleButton
        android:id="@+id/toggle_device_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="170dp"
        android:text="@string/enable_device_admin"
        android:textOff="@string/device_admin_disabled"
...
